syntax = "proto3";

package grpc;
option go_package = "https://github.com/Manuu201/tarea2/tree/main/proto";


service ClienteService {
    rpc AccionCliente(ClienteRequest) returns (ClienteResponse) {}
}

message ClienteRequest {
    string rut = 1;
    string correo = 2;
    bytes pdf = 3;
}

message ClienteResponse {
    string mensaje = 1;
}